add_definitions( -DRUQOLA_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}/data")
macro(add_ruqola_test _source)
  set( _test ${_source})
  get_filename_component( _name ${_source} NAME_WE )
  add_executable( ${_name} ${_test} )
  add_test(NAME ${_name} COMMAND ${_name} )
  ecm_mark_as_test(${_name})
  target_link_libraries( ${_name} Qt5::Test libruqolacore)
endmacro()

add_ruqola_test(rocketchatmessagetest.cpp)
add_ruqola_test(roommodeltest.cpp)
add_ruqola_test(messagemodeltest.cpp)
add_ruqola_test(typingnotificationtest.cpp)
add_ruqola_test(utilstest.cpp)
add_ruqola_test(usertest.cpp)
add_ruqola_test(messageattachmenttest.cpp)
add_ruqola_test(rocketchataccountsettingstest.cpp)
add_ruqola_test(messagetest.cpp)
add_ruqola_test(messageurltest.cpp)
add_ruqola_test(roomtest.cpp)
add_ruqola_test(ruqolaserverconfigtest.cpp)
add_ruqola_test(statusmodeltest.cpp)
add_ruqola_test(rocketchatcachetest.cpp)
add_ruqola_test(textconvertertest.cpp)
add_ruqola_test(loadrecenthistorymanagertest.cpp)
add_ruqola_test(notificationtest.cpp)
add_ruqola_test(emojitest.cpp)
add_ruqola_test(emojimanagertest.cpp)
add_ruqola_test(otrtest.cpp)
add_ruqola_test(otrmanagertest.cpp)
add_ruqola_test(rocketchataccounttest.cpp)
add_ruqola_test(usersmodeltest.cpp)
add_ruqola_test(usersforroommodeltest.cpp)
add_ruqola_test(filetest.cpp)
add_ruqola_test(filesforroommodeltest.cpp)
add_ruqola_test(filesforroomfilterproxymodeltest.cpp)
add_ruqola_test(channeltest.cpp)
add_ruqola_test(usersforroomfilterproxymodeltest.cpp)
add_ruqola_test(usercompletermodeltest.cpp)
add_ruqola_test(roomfilterproxymodeltest.cpp)
add_ruqola_test(usercompleterfilterproxymodeltest.cpp)
add_ruqola_test(searchchannelmodeltest.cpp)
add_ruqola_test(searchchannelfilterproxymodeltest.cpp)
add_ruqola_test(inputcompletermodeltest.cpp)
add_ruqola_test(loginmethodmodeltest.cpp)
add_ruqola_test(inputtextmanagertest.cpp)
add_ruqola_test(clipboardproxytest.cpp)
add_ruqola_test(authenticationinfotest.cpp)
add_ruqola_test(searchmessagemodeltest.cpp)
add_ruqola_test(searchmessagefilterproxymodeltest.cpp)
add_ruqola_test(searchmessagetest.cpp)
add_ruqola_test(accountmanagertest.cpp)
add_ruqola_test(rocketchataccountmodeltest.cpp)
add_ruqola_test(ruqolatest.cpp)
add_ruqola_test(managerdatapathstest.cpp)
add_ruqola_test(rocketchataccountfilterproxymodeltest.cpp)
add_ruqola_test(roomwrappertest.cpp)
add_ruqola_test(notificationoptionstest.cpp)
add_ruqola_test(reactionstest.cpp)
add_ruqola_test(reactiontest.cpp)
add_ruqola_test(emoticonmodeltest.cpp)
add_ruqola_test(unicodeemoticontest.cpp)
add_ruqola_test(receivetypingnotificationmanagertest.cpp)
add_ruqola_test(serverconfiginfotest.cpp)
add_ruqola_test(notificationpreferencemodeltest.cpp)
add_ruqola_test(notificationpreferencestest.cpp)
add_ruqola_test(mentionstest.cpp)
add_ruqola_test(mentiontest.cpp)
add_ruqola_test(mentionsmodeltest.cpp)
add_ruqola_test(mentionsfilterproxymodeltest.cpp)
add_ruqola_test(roletest.cpp)
add_ruqola_test(rolestest.cpp)
add_ruqola_test(messagestarredtest.cpp)
add_ruqola_test(messagepinnedtest.cpp)
add_ruqola_test(notificationdesktopdurationpreferencemodeltest.cpp)
add_ruqola_test(notificationdesktopsoundpreferencemodeltest.cpp)
add_ruqola_test(unicodeemoticonparsertest.cpp)
add_ruqola_test(discussionsmodeltest.cpp)
add_ruqola_test(discussionsfilterproxymodeltest.cpp)
add_ruqola_test(discussiontest.cpp)
add_ruqola_test(discussionstest.cpp)
add_ruqola_test(threadtest.cpp)
add_ruqola_test(threadsfilterproxymodeltest.cpp)
add_ruqola_test(emoticoncategoriesmodeltest.cpp)
add_ruqola_test(emoticoncategorytest.cpp)

add_subdirectory(qml)
